<resources>
    <!-- LOG IN -->
    <string name="log_quit">Quit</string>
    <string name="log_to_menu">Go to Menu</string>
    <string name="log_login">Login</string>
    <string name="or_register_here"><u>or register here</u></string>
    <string name="log_username">Username</string>
    <string name="log_password">Password</string>
    <string name="log_log">Login</string>
    <!-- Register -->
    <string name="reg_tolog">Back to Login</string>
    <string name="reg_register">Register</string>
    <!-- empty for now -->

    <!-- Main Menu -->
    <string name="menu_menu">Main Menu</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_language">Lang</string>
    <string name="menu_welcome">Welcome,</string>
    <string name="menu_multiplication">Multiplication</string>
    <string name="menu_ball_on_screen">Ball on Screen</string>
    <string name="menu_day_counting">Days of week</string>
    <!-- Example Activity -->
    <string name="activity_back">Back</string>
    <string name="activity_current">Current Activity</string>
    <string name="activity_learn">Learn</string>
    <string name="activity_play">Play</string>
    <!-- Multiplication Activity Learn -->
    <string name="multip_learn">Learning Multiplication</string>
    <string name="multip_explanation1">
        Multiplication is adding numbers together multiple times. For example when we say 2 times 2, we add two, two times \n\n
        You can see the multiplication table here:
    </string>
    <string name="multip_explanation2">
        Here you can see two repeating things, first is when we change the places of the numbers: for example 4x5 and 5x4, they equal to same number! \n\n
        That\'s because of a property of multiplication.\n\n
        Also, adding anything zero times means we don\'t add anything at all!
    </string>
    <string name="multip_play">Play</string>
    <string name="multip_learn_quit">Quit</string>
    <!-- Multiplication Activity Play -->
    <string name="multip_play_name">Playing Activity</string>
    <string name="multip_play_explanation">Here you can test what you have learned.</string>
    <!-- Multiplication Examples -->
    <string name="multip_example1"> What is 1x5?</string>
    <string name="multip_example2">" What is 7x6"</string>
    <string name="multip_example3"> What is 10x2</string>
    <string name="multip_example4"> What is 2x7</string>
    <string name="multip_warning"> This is a hard one.</string>
    <string name="multip_example5"> What is 11x7</string>

    <!-- Direction Learn -->
    <string name="direction_name_learn"> Learning Directions</string>
    <string name="direction_exp1">
        Today we are learning directions.
    </string>
    <string name="direction_learn_quit"> Quit </string>
    <string name="direction_play"> Play </string>
    <!-- Direction Play -->
    <string name="direction_play_name"> Playing Activity </string>

    <!-- Direction Examples-->
    <string name="direction_play_q"> What does the picture above represent? </string>


    <string name="app_name">AdvancedProgrammingProject</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Warn_Failed">Failed !</string>
    <string name="Warn_Success">Correct !</string>
    <string name="Warn_TextOnly">Enter only numbers please !</string>
    <string name="Direction_Straight">Straight</string>
    <string name="Directions_Left">Left</string>
    <string name="Directions_Right">Right</string>
    <string name="Directions_onRight">On the right</string>
    <string name="Directions_onleft">On the left</string>
    <string name="Directions_nextto">Next to</string>
    <string name="Directions_between">Between</string>
    <string name="Directions_onFront">On front</string>
    <string name="daycount_learn_name">Days of the Week</string>
    <string name="daycount_learn_exp">"         There are 7 days in a week. In order these are: "</string>
    <string name="daycount_Mon">Monday</string>
    <string name="daycount_Tue">Tuesday</string>
    <string name="daycount_Wed">Wednesday</string>
    <string name="daycount_Thu">Thursday</string>
    <string name="daycount_Fri">Friday</string>
    <string name="daycount_Sat">Saturday</string>
    <string name="daycount_Sun">Sunday</string>
    <string name="daycount_Weekend">The last two days are called \'Weekend\'.</string>
    <string name="daycount_Q1">What is the 3. day of the week ?</string>
    <string name="daycount_Q2">What is the 5. day of the week ?</string>
    <string name="daycount_Q3">What is the 6. day of the week ?</string>
    <string name="monthcount_learn_name">Months of the Year</string>
    <string name="monthcount_learn_exp">There are 12 months in a year. In order these are:</string>
    <string name="month1">January </string>
    <string name="month2">February </string>
    <string name="month3">March </string>
    <string name="month4">April </string>
    <string name="month5">May </string>
    <string name="month6">June </string>
    <string name="month7">July </string>
    <string name="month8">August </string>
    <string name="month9">September </string>
    <string name="month10">October </string>
    <string name="month11">November </string>
    <string name="month12">December </string>
    <string name="numbercount_learn_name">Number Counting</string>
    <string name="numbercount_exp">In this experience, we will show you numbers in an order. You need to remember the numbers and send them back in the order they were shown.
    </string>
    <string name="numbercount_reverse_learn_name">Reverse Number Counting</string>
    <string name="numbercount_reverse_exp">"In this experience, we will show you random numbers in an order. You need to remember the numbers and send them back in the reversed order.     "</string>
    <string name="monthcount_Q1">What is the 2. month of the year?</string>
    <string name="monthcount_Q2">What is the 5. month of the year?</string>
    <string name="monthcount_Q3">What is the 8. month of the year?</string>
    <string name="numbercount_0">0 : Zero</string>
    <string name="numbercount_1">1 : One</string>
    <string name="numbercount_2">2 : Two"</string>
    <string name="numbercount_3">3 : Three"</string>
    <string name="numbercount_4">4 : Four</string>
    <string name="numbercount_5">5 : Five</string>
    <string name="numbercount_6">6 : Six</string>
    <string name="numbercount_7">7 : Seven</string>
    <string name="numbercount_8">8 : Eight</string>
    <string name="numbercount_9">9 : Nine</string>
    <string name="monthcount_exp2">There 10 numbers. These are in order:</string>
    <string name="numbercountplay_exp">Write down the numbers in the ascending order.</string>
    <string name="numbercountplayreverse_exp">Write down the numbers in the descending order.</string>
    <string name="seasons_spring">Spring</string>
    <string name="seasons_summer">Summer</string>
    <string name="seasons_autumn">Autumn</string>
    <string name="seasons_winter">Winter</string>
    <string name="btn_Next">Next</string>
    <string name="Seasons">Seasons</string>
    <string name="Seasons_Exp">"In this experience, you will learn seasons. "</string>
    <!-- clocks -->
    <string name="AnalogClock_Learn">Analog and Digital Clocks</string>
    <string name="AnalogClock_exp">You can see digital clocks in the middle as numbers.\n Analog clocks are the circle with sticks showing time.\n They read differently.\n We will show you the way they are read, first analog clocks then digital ones.</string>
    <string name="Analog_0730">Half past seven, seven thirty</string>
    <string name="Analog_0845">A quarter to nine, eight forty five</string>
    <string name="Analog_1105">Five past eleven, eleven \'oh\' five \n When we see zeros in the minute part of digital clocks, we read zero as \'oh\'</string>
    <string name="Analog_1200">Noon/Midnight, twelve</string>
    <string name="Analog_1440">Twenty to three, two forty</string>
    <string name="Analog_1615">A quarter past four, four fifteen</string>
    <string name="Analog_1700">Five O\'clock, five (AM/PM)</string>
    <!-- clocks -->
    <string name="FindSimilars">Find similar objects</string>
    <string name="FindSimilar_exp">Some objects are very similar but not same. See how it happens?</string>
    <string name="FindSimilar_Tree_Exp">These trees are similar.</string>
    <string name="FindSimilar_Bicycle">These Bicycles are similar.</string>
    <string name="FindSimilar_Dif_Objects">These objects are not similar.</string>
    <string name="Answer_Yes">Yes</string>
    <string name="Answer_No">No</string>
    <string name="FindSimilarPlay_Question">Are those pictures similar?</string>
    <string name="FindSimilarPlay_Title">Find the similar pictures !</string>
    <string name="SpellingLearn_Name">Spelling a Word</string>
    <string name="SpellingLearn_Exp">In this experience, we will show you how a word is spelled with letters.</string>
    <string name="SpellingWord">Picture</string>
    <string name="SpellingPlay_Exp">Please fill in the blanks the letters of the word below:</string>
    <string name="Check">Check</string>
</resources>
