<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F8D8D"
    tools:context=".MonthCountingPlay">

    <TextView
        android:id="@+id/monthcount_play_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="170dp"
        android:text="@string/monthcount_learn_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView  android:layout_width="390dp"
        android:layout_height="600dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthcount_play_name">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/monthcount_Q1"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/monthcount_Q1"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <RadioGroup
                android:id="@+id/Answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio11"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month6"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio12"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month10"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio13"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month2"
                    android:textSize="20sp" />
            </RadioGroup>
            <TextView
                android:id="@+id/monthcount_Q2"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/monthcount_Q2"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthcount_Q1" />
            <RadioGroup
                android:id="@+id/Answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio21"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month1"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio22"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month5"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio23"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month12"
                    android:textSize="20sp" />
            </RadioGroup>
            <TextView
                android:id="@+id/monthcount_Q3"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/monthcount_Q3"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthcount_Q2" />
            <RadioGroup
                android:id="@+id/Answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio31"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month8"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio32"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month4"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio33"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month3"
                    android:textSize="20sp" />
            </RadioGroup>
            <Button
                android:id="@+id/monthcount_play_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="15dp"
                android:text="@string/multip_learn_quit"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>